--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "tw-elements": "1.0.0-beta1"
   },
   "devDependencies": {
+    "@fullcalendar/core": "^6.1.5",
+    "@fullcalendar/daygrid": "^6.1.5",
+    "@fullcalendar/react": "^6.1.5",
     "@types/chart.js": "^2.9.37",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
