--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "chart.js": "^4.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
-    "tw-elements": "1.0.0-beta1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@fullcalendar/core": "^6.1.5",
